--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-progressive-image": "^0.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.1.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-localstorage-simple": "^2.1.3",
@@ -20,11 +20,11 @@
   "scripts": {
     "precommit": "npm run lint && npm run format && git add .",
     "prepush": "CI=true npm test",
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "build:test": "CI=true react-app-rewired test --env=jsdom",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "build:test": "CI=true react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write 'src/**/*.js'",
     "setup:prod": "npm install && npm run build:test && npm run lint && npm install --production"
@@ -37,7 +37,12 @@
     "husky": "^0.14.3",
     "jest-fetch-mock": "^1.6.5",
     "jest-styled-components": "^5.0.1",
-    "prettier": "^1.13.7",
-    "react-app-rewired": "^1.5.2"
-  }
+    "prettier": "^1.13.7"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
